07-hello-openshift/answer/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-openshift
  name: hello-openshift
spec:
  host: hello-rahti-answer.rahtiapp.fi
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: hello-openshift
